# acdlo

./: README.md  pyproject.toml
scripts/: floating_base_model_gen.py  static_base_model_gen.py  taylor_series_expansion.py
src/acdlo/: static_base.py
src/acdlo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/acdlo/sympy_fcns/fb/: B  C  G  Gv  J_end_wrt_base  fk  fka
src/acdlo/sympy_fcns/sb/: B  C  G  Gv  J_end_static  J_mid_static  J_static  fk  fk_end_static  fk_mid_static
src/acdlo/sympy_fcns/sb/identification/: E_mE_0  E_mL_0  Y  dE_dmE  dE_dmL
